; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ocfs2/extr_alloc.c_ocfs2_free_truncate_context.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ocfs2/extr_alloc.c_ocfs2_free_truncate_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ocfs2_truncate_context = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@ML_NOTICE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"Truncate completion has non-empty dealloc context\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ocfs2_truncate_context*)* @ocfs2_free_truncate_context to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ocfs2_free_truncate_context(%struct.ocfs2_truncate_context* %0) #0 {
  %2 = alloca %struct.ocfs2_truncate_context*, align 8
  store %struct.ocfs2_truncate_context* %0, %struct.ocfs2_truncate_context** %2, align 8
  %3 = load %struct.ocfs2_truncate_context*, %struct.ocfs2_truncate_context** %2, align 8
  %4 = getelementptr inbounds %struct.ocfs2_truncate_context, %struct.ocfs2_truncate_context* %3, i32 0, i32 1
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32, i32* @ML_NOTICE, align 4
  %10 = call i32 @mlog(i32 %9, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %8, %1
  %12 = load %struct.ocfs2_truncate_context*, %struct.ocfs2_truncate_context** %2, align 8
  %13 = getelementptr inbounds %struct.ocfs2_truncate_context, %struct.ocfs2_truncate_context* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @brelse(i32 %14)
  %16 = load %struct.ocfs2_truncate_context*, %struct.ocfs2_truncate_context** %2, align 8
  %17 = call i32 @kfree(%struct.ocfs2_truncate_context* %16)
  ret void
}

declare dso_local i32 @mlog(i32, i8*) #1

declare dso_local i32 @brelse(i32) #1

declare dso_local i32 @kfree(%struct.ocfs2_truncate_context*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
